# dl4dp

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
dl4dp/: __init__.py  __main__.py  cli.py  dl4dp.py  layers.py  model.py  modules.py  parser.py  tagger.py  trainer.py  utils.py  validation.py  word2vec.py
dl4dp/docs/: slovak_sota.md
src/: dl4dp.py  layers.py  model.py  models.py  test_bist.py  test_mlp.py  test_utils.py  ud.py  utils.py  word2vec  word2vec.py
src/dl4dp/: data_types.py  io.py  max_branching.py  utils.py
test/: test1.conllu
tests/: test_model.py  test_modules.py  test_utils.py
treebanks/dev/cs/: cs.txt  cs_cac-pmor.conllu  cs_cac-udpipe.conllu  cs_cac.txt  cs_cltt-udpipe.conllu
treebanks/dev/en/: en-pmor.conllu  en_lines-udpipe.conllu  en_partut-pmor.conllu  en_partut-udpipe.conllu
treebanks/dev/sk/: sk-udpipe.conllu
treebanks/test/cs/: cs.txt  cs_cac-udpipe.conllu  cs_cac.txt  cs_cltt-udpipe.conllu  cs_cltt.conllu  cs_cltt.txt  cs_pud-udpipe.conllu  cs_pud.conllu  cs_pud.txt
treebanks/test/en/: en-udpipe.conllu  en_lines-udpipe.conllu  en_lines.txt  en_partut-udpipe.conllu  en_partut.txt  en_pud-udpipe.conllu
treebanks/test/sk/: sk-udpipe.conllu
treebanks/train/cs/: cs_cac.txt  cs_cltt-pmor.conllu
treebanks/train/en/: en-udpipe.conllu  en_lines-pmor.conllu  en_lines.txt  en_partut.txt
treebanks/train/sk/: sk-pmor.conllu
