[metadata]
description-file = README.md

[flake8]
max-line-length = 120

[tox:tox]
envlist = py39

[testenv]
install_command = pip install {opts} {packages}
deps =
    flake8
    pytest
setenv =
    DL4DP_HOME = {toxinidir}/home

[testenv:test]
commands =
    pytest -s -v {posargs:tests}

[testenv:train]
commands =
    python3 -m dl4dp train parser -t en_ewt
